--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "airstreams",
+        "backcountry",
+        "glamping",
+        "Hipcamp",
         "Ninovan",
-        "Stuga"
+        "Stuga",
+        "treehouses"
     ]
 }
